--- a/oficialia/src/app/pages/main/main.component.css
+++ b/oficialia/src/app/pages/main/main.component.css
@@ -4,51 +4,48 @@
 }
 
 /* -------------------- SIDENAV -------------------- */
-.sidenav {
-  width: 220px;
-  background-color:  rgb(213, 213, 184); /* Azul marino */
-  color: white !important; /* Fuerza el color blanco */
-  padding-top: 16px;
 
-}
-
-
-/* Aplica color blanco a todos los elementos del sidenav */
-.sidenav *,
-mat-nav-list a.mat-list-item,
-mat-nav-list .mat-list-item-content,
-mat-nav-list .mat-list-item-content span {
-  color: rgb(255, 255, 255) !important;
+.sidenav-container {
+  height: 100vh;
 }
 
 .sidenav-header {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 1rem;
+  text-align: center;
+  padding: 16px 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .sidenav-logo {
-  width: 140px;
-  max-width: 100%;
+  width: 100px;
   height: auto;
-  padding: 10px;
 }
 
-mat-nav-list a.mat-list-item {
+.letra a {
+  color: white;
+  font-weight: 500;
+  transition: background-color 0.3s ease;
+}
+
+.letra a:hover,
+.letra a.active-link {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.mat-icon {
+  margin-right: 10px;
+}
+
+.main-toolbar {
+  background-color:rgba(210, 252, 201, 0.808);
+  color: black;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.toolbar-title {
+  flex: 1;
+  font-size: 20px;
   font-weight: 600;
-  color: #e0f2f1;
-  margin: 4px 0;
-  border-radius: 8px;
-  transition: background-color 0.3s, color 0.3s;
 }
-
-mat-nav-list a.mat-list-item:hover,
-mat-nav-list a.mat-list-item.active-link {  
-  background-color: rgba(255, 255, 255, 0.1);
-  color: white !important;
-}
-
-
 /* -------------------- TOOLBAR -------------------- */
 .main-toolbar {
   display: flex;
@@ -65,7 +62,7 @@ mat-nav-list a.mat-list-item.active-link {
 
 /* -------------------- CONTENIDO PRINCIPAL -------------------- */
 .content-wrapper {
-  padding: 1.5rem 1rem;
+  padding: 1.5rem 2rem;
 }
 
 /* -------------------- CABECERA DE SECCIÓN -------------------- */
@@ -79,10 +76,7 @@ mat-nav-list a.mat-list-item.active-link {
 }
 
 .section-title {
-  font-size: 1.3rem;
-  font-weight: 700;
-  margin: 0;
-  color: #333;
+  margin-left: 10px;
 }
 
 /* -------------------- BUSCADOR -------------------- */
@@ -93,9 +87,10 @@ mat-nav-list a.mat-list-item.active-link {
 
 .filter-field {
   flex: 1;
-  width: 50%;
-  max-width: 150px;
-  margin-left: auto;
+  width: 100%;
+  max-width: 300px;
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
 /* -------------------- TABLA -------------------- */
@@ -146,3 +141,22 @@ tr.table-row:hover td {
   }
 }
 
+.acciones-btns {
+  display: flex;
+  justify-content: center;
+  gap: 8px; /* Espacio entre íconos */
+  align-items: center;
+}
+
+.acciones-header {
+  text-align: center;
+}
+
+
+.sidenav {
+  width: 250px;
+  background: beige; 
+  color: white;
+  padding-top: 16px;
+  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
+}
