--- a/oficialia/src/app/pages/main/main.component.html
+++ b/oficialia/src/app/pages/main/main.component.html
@@ -9,12 +9,22 @@
     </div>
 
     <mat-nav-list class="letra">
-      <a mat-list-item routerLink="/main" routerLinkActive="active-link">Oficios en Tramite</a>
-      <a mat-list-item routerLink="/oficio" routerLinkActive="active-link">Registro de Oficios</a>
-      <a mat-list-item routerLink="/circular" routerLinkActive="active-link">Generar Circular</a>
-      <a mat-list-item routerLink="/user" routerLinkActive="active-link">Permisos y Roles</a>
-        <a mat-list-item routerLink="/agenda" routerLinkActive="active-link">Agenda</a>
-    </mat-nav-list>
+  <a mat-list-item routerLink="/main" routerLinkActive="active-link">
+    <mat-icon>drafts</mat-icon> Oficios en Trámite
+  </a>
+  <a mat-list-item routerLink="/oficio" routerLinkActive="active-link">
+    <mat-icon>post_add</mat-icon> Registro de Oficios
+  </a>
+  <!-- <a mat-list-item routerLink="/circular" routerLinkActive="active-link">
+    <mat-icon>sync_alt</mat-icon> Generar Circular
+  </a> -->
+  <a mat-list-item routerLink="/user" routerLinkActive="active-link">
+    <mat-icon>manage_accounts</mat-icon> Permisos y Roles
+  </a>
+  <a mat-list-item routerLink="/agenda" routerLinkActive="active-link">
+    <mat-icon>event</mat-icon> Agenda
+  </a>
+</mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
@@ -40,16 +50,15 @@
         </button>
       </mat-menu>
     </mat-toolbar>
-
-    <div class="content-wrapper">
-    <div class="section-header">
-  <h6 class="section-title">Oficios en trámite</h6>
-          <mat-form-field appearance="outline" class="filter-field">
+    <div class="table-header">
+   <mat-form-field appearance="outline" class="filter-field">
     <mat-label>Buscar</mat-label>
     <input matInput (input)="aplicarFiltro($event)" placeholder="Buscar" />
   </mat-form-field>
-</div>
+    </div>
 
+    <div class="content-wrapper">
+ 
 
   
       <div class="table-container">
