nombre en registro de usuario

--- a/oficialia/src/app/auth/registrer/registrer.component.html
+++ b/oficialia/src/app/auth/registrer/registrer.component.html
@@ -9,6 +9,18 @@
         </div>
 
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+          <!--nombre usuario-->
+          <div class="mb-3">
+            <label for="nombre_u" class="form-label">Nombre de usuario</label>
+            <div class="input-group">
+              <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+              <input id="nombre_u" type="text" class="form-control" formControlName="nombre_u" placeholder="Juan Perez">
+            </div>
+            <div *ngIf="registerForm.get('nombre_u')?.invalid && registerForm.get('nombre_u')?.touched" class="text-danger mt-1">
+              Ingresa un nombre de usuario
+            </div>
+          </div>
+
           <!-- Correo -->
           <div class="mb-3">
             <label for="email" class="form-label">Correo electrónico</label>
